--- a/style.css
+++ b/style.css
@@ -1,15 +1,5 @@
-@charset "UTF-8";
-/*!
-* Start Bootstrap - One Page Wonder v6.0.6 (https://startbootstrap.com/theme/one-page-wonder)
-* Copyright 2013-2023 Start Bootstrap
-* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-one-page-wonder/blob/master/LICENSE)
-*/
-/*!
- * Bootstrap  v5.2.3 (https://getbootstrap.com/)
- * Copyright 2011-2022 The Bootstrap Authors
- * Copyright 2011-2022 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
+ @charset "UTF-8";
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -112,16 +102,18 @@ hr {
   opacity: 0.25;
 }
 
-h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+/* h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-family: "Catamaran", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 800;
   line-height: 1.2;
-}
+} */
 
 h1, .h1 {
   font-size: calc(1.375rem + 1.5vw);
+  padding: 15px;
+  color: #bdfff1;
 }
 @media (min-width: 1200px) {
   h1, .h1 {
@@ -131,6 +123,8 @@ h1, .h1 {
 
 h2, .h2 {
   font-size: calc(1.325rem + 0.9vw);
+  color: #bdfff1;
+  padding: 15px;
 }
 @media (min-width: 1200px) {
   h2, .h2 {
@@ -140,6 +134,9 @@ h2, .h2 {
 
 h3, .h3 {
   font-size: calc(1.3rem + 0.6vw);
+  padding: 15px;
+  color: #bdfff1;
+
 }
 @media (min-width: 1200px) {
   h3, .h3 {
@@ -149,6 +146,9 @@ h3, .h3 {
 
 h4, .h4 {
   font-size: calc(1.275rem + 0.3vw);
+  padding: 15px;
+  color: #bdfff1;
+
 }
 @media (min-width: 1200px) {
   h4, .h4 {
@@ -157,16 +157,25 @@ h4, .h4 {
 }
 
 h5, .h5 {
-  font-size: 1.25rem;
+  font-size: 3vw;
+  padding: 15px;
+  color: #bdfff1;
+
 }
 
 h6, .h6 {
   font-size: 1rem;
+  padding: 15px;
+
 }
 
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  font-size: 2.5vw;
+  font-family: "Oswald", sans-serif;
+  color: black;
+  padding: 15px;
 }
 
 abbr[title] {
@@ -445,14 +454,14 @@ legend + * {
   -webkit-appearance: textfield;
 }
 
-/* rtl:raw:
+ rtl:raw:
 [type="tel"],
 [type="url"],
 [type="email"],
 [type="number"] {
   direction: ltr;
 }
-*/
+
 ::-webkit-search-decoration {
   -webkit-appearance: none;
 }
@@ -4492,8 +4501,8 @@ textarea.form-control-lg {
   float: left;
   padding-right: var(--bs-breadcrumb-item-padding-x);
   color: var(--bs-breadcrumb-divider-color);
-  content: var(--bs-breadcrumb-divider, "/") /* rtl: var(--bs-breadcrumb-divider, "/") */;
-}
+  content: var(--bs-breadcrumb-divider, "/") rtl: var(--bs-breadcrumb-divider, "/");
+ }
 .breadcrumb-item.active {
   color: var(--bs-breadcrumb-item-active-color);
 }
@@ -5584,7 +5593,7 @@ textarea.form-control-lg {
   border-top-color: var(--bs-tooltip-bg);
 }
 
-/* rtl:begin:ignore */
+/*rtl:begin:ignore*/
 .bs-tooltip-end .tooltip-arrow, .bs-tooltip-auto[data-popper-placement^=right] .tooltip-arrow {
   left: 0;
   width: var(--bs-tooltip-arrow-height);
@@ -10860,8 +10869,14 @@ header.masthead {
   overflow: hidden;
   padding-top: calc(7rem + 72px);
   padding-bottom: 7rem;
+
   /* background: linear-gradient(0deg, rgba(0,255,203,1) 0%, rgba(9,121,96,1) 100%); */
   background: linear-gradient(0deg, rgba(93,201,179,1) 0%, rgba(9,121,96,1) 100%);
+  /* background: linear-gradient(50deg, rgba(71,183,244,1) 8%, rgba(105,106,200,1) 87%); */
+  /* background: linear-gradient(180deg, rgba(189,255,241,1) 20%, rgba(105,106,200,1) 100%); */
+  /* background: linear-gradient(180deg, rgba(105,106,200,1) 0%, rgba(123,210,192,1) 100%); */
+  /* background: radial-gradient(circle, rgba(140,153,215,1) 30%, rgba(95,244,213,1) 90%); */
+  /* background: linear-gradient(180deg, rgba(140,237,208,1) 0%, rgba(111,131,229,1) 65%); */
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
@@ -10870,10 +10885,11 @@ header.masthead {
 header.masthead .masthead-content {
   z-index: 1;
   position: relative;
+  padding: 90px;
 
 }
 header.masthead .masthead-content .masthead-heading {
-  font-size: 4rem;
+  font-size: 5vw;
   color: #FFFF
 }
 header.masthead .masthead-content .masthead-subheading {
@@ -10885,18 +10901,26 @@ header.masthead .bg-circle {
   border-radius: 100%;
   /* background: linear-gradient(90deg, rgba(9,121,96,1) 50%, rgba(0,255,203,1) 100%); */
   background: linear-gradient(90deg, rgba(9,121,96,1) 50%, rgba(56,196,168,1) 100%);
+  /* background: linear-gradient(45deg, rgba(189,255,241,1) 40%, rgba(105,106,200,1) 97%); */
+  /* background: linear-gradient(270deg, rgba(105,106,200,1) 0%, rgba(123,210,192,1) 100%); */
+  /* background: linear-gradient(235deg, rgba(71,183,244,1) 8%, rgba(105,106,200,1) 87%); */
+  /* background: linear-gradient(317deg, rgba(140,237,208,1) 0%, rgba(111,131,229,1) 65%); */
+  /* background: linear-gradient(180deg, rgba(140,237,208,1) 20%, rgba(111,131,229,1) 90%); */
+
 }
 header.masthead .bg-circle-1 {
   height: 90rem;
   width: 90rem;
   bottom: -55rem;
   left: -55rem;
+
 }
 header.masthead .bg-circle-2 {
   height: 50rem;
   width: 50rem;
   top: -25rem;
   right: -25rem;
+
 }
 header.masthead .bg-circle-3 {
   height: 20rem;
@@ -10925,9 +10949,40 @@ header.masthead .bg-circle-4 {
 }
 
 section {
-  padding: 30px;
+padding: 30px;
+/* background: #696ac8; */
+/* background: radial-gradient(circle, rgba(105,106,200,1) 8%, rgba(71,183,244,1) 87%); */
+background-color: #8c99d7
 }
 
-p {
+.card {
+  height: 100%;
+  width: 100%;
   padding: 20px;
+  margin: 10px;
 }
+
+#port {
+  width: 50%;
+  height: 50%;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.accordion-item {
+  background: #8c99d7 !important;
+}
+
+.purple{
+  background: #8c99d7 !important;
+}
+
+.small-text {
+  font-size: 1.5rem;
+}
+
+img {
+  padding: 10px;
+}
+
