--- a/style.css
+++ b/style.css
@@ -11013,5 +11013,12 @@ a {
 }
 
 li {
-  font-size: 2vw;
+  font-size: 2.5vw;
+  color: white;
+  font-family: "Oswald", sans-serif;
 }
+
+hr {
+  color: #bdfff1
+}
+
