--- a/style.css
+++ b/style.css
@@ -11015,7 +11015,7 @@ img {
 
 
 
-.ggreen {
+/* .ggreen {
   color: #068c5a;
   background: #068c5a;
 }
@@ -11028,6 +11028,6 @@ li {
   font-size: 2.5vw;
   color: white;
   font-family: "Oswald", sans-serif;
-}
+} */
 
 
