--- a/style.css
+++ b/style.css
@@ -7161,7 +7161,7 @@ textarea.form-control-lg {
 }
 
 .border {
-  border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
+  border: 5px solid black !important;
 }
 
 .border-0 {
