--- a/style.css
+++ b/style.css
@@ -4225,8 +4225,8 @@ textarea.form-control-lg {
 }
 
 .card-body {
-  /* flex: 1 1 auto; */
-  /* padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x); */
+  flex: 1 1 auto;
+  padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
   padding: 0.5px;
   color: var(--bs-card-color);
 
@@ -4318,7 +4318,7 @@ textarea.form-control-lg {
 .card-group > .card {
   margin-bottom: var(--bs-card-group-margin);
 }
-@media (min-width: 576px) {
+@media (min-width: 1000px) {
   .card-group {
     display: flex;
     flex-flow: row wrap;
